modif style combo box

--- a/View/Customer/ListCustomerUCView.xaml
+++ b/View/Customer/ListCustomerUCView.xaml
@@ -24,13 +24,13 @@
             <StackPanel Orientation="Horizontal" Grid.Row="1" Background="White" HorizontalAlignment="Stretch" Margin="2,2,2,0">
                 <Label Content="Filtres" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
                 <Label Content="Pays" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                <ComboBox Height="30" Margin="5,0,0,0">
+                <ComboBox Height="30" Width="100" Margin="5,0,0,0" Text="Sélection pays">
                     <ComboBoxItem Name="cbi1">Suisse</ComboBoxItem>
                     <ComboBoxItem Name="cbi2">Italie</ComboBoxItem>
                     <ComboBoxItem Name="cbi3">France</ComboBoxItem>
                 </ComboBox>
                 <Label Content="Langue" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                <ComboBox Height="30" Margin="5,0,10,0">
+                <ComboBox Height="30" Width="100" Margin="5,0,10,0" Text="Sélection langue">
                     <ComboBoxItem>Francais</ComboBoxItem>
                     <ComboBoxItem>Italien</ComboBoxItem>
                     <ComboBoxItem>Anglais</ComboBoxItem>
