--- a/View/Customer/Student/AddStudentView.xaml
+++ b/View/Customer/Student/AddStudentView.xaml
@@ -34,7 +34,7 @@
             <Label Content="Parenté" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="3"/>
             <Label Content="Date de naissance" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="4"/>
 
-            <ComboBox SelectedIndex="{Binding genderIndex, Mode=TwoWay}" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
+            <ComboBox SelectedValue="{Binding gender}" DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding genders}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Row="1" Grid.Column="1">
                 <TextBox Text="{Binding lastname, Mode=OneWayToSource}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2"/>
@@ -91,7 +91,7 @@
                 </TextBlock>
             </StackPanel>
 
-            <ComboBox SelectedIndex="{Binding kinshipIndex, Mode=TwoWay}" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
+            <ComboBox SelectedIndex="{Binding kinship}"  DisplayMemberPath="Value"  SelectedValuePath="Key" ItemsSource="{Binding kinships}" Grid.Row="3" Grid.Column="1" Margin="10,8,10,8" />
 
             <StackPanel Grid.Column="1" Grid.Row="4">
                 <DatePicker SelectedDate="{Binding birthday, Mode=TwoWay}" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" Grid.Column="1" Grid.Row="4"/>
