--- a/View/Customer/AddCustomerView.xaml
+++ b/View/Customer/AddCustomerView.xaml
@@ -36,7 +36,7 @@
                 <Label Content="Prénom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Column="0" Grid.Row="1" />
 
                 <Label Content="Nom" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Column="2" Grid.Row="1" />
-                <ComboBox SelectedIndex="{Binding civilityIndex}" ItemsSource="{Binding civilities}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
+                <ComboBox ItemsSource="{Binding civilities}" DisplayMemberPath="Value"  SelectedValuePath="Key" SelectedValue="{Binding civility}" Grid.Row="0" Grid.Column="1" Margin="10,8,10,8" />
                 <StackPanel Grid.Row="1" Grid.Column="1" >
                     <TextBox Text="{Binding firstname, Mode=OneWayToSource}"  HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10,8,10,2" >
                         <TextBox.Style>
