--- a/View/Organisation/ListOrganisationUCView.xaml
+++ b/View/Organisation/ListOrganisationUCView.xaml
@@ -14,6 +14,7 @@
         <Grid Grid.Row="0" Margin="15">
             <Grid.RowDefinitions>
                 <RowDefinition Height="35" />
+                <RowDefinition Height="50" />
                 <RowDefinition />
             </Grid.RowDefinitions>
 
@@ -22,13 +23,32 @@
                 <Label Content="{Binding nbrOrganisation}"  VerticalAlignment="Center" Margin="0,0,10,0" Foreground="White" FontWeight="Bold"/>
                 <Label Content="Organisation(s)" VerticalAlignment="Center" Foreground="White" FontStyle="Italic"/>
             </StackPanel>
-            <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" HorizontalAlignment="Stretch" BorderBrush="#FF30859A" BorderThickness="2" VerticalAlignment="Stretch" ItemsSource="{Binding organisations}" x:Name="list" Grid.Row="1" >
+            <Border BorderThickness="2" BorderBrush="#30859a" Grid.Row="1" />
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Background="White" HorizontalAlignment="Stretch" Margin="2,2,2,0">
+                <Label Content="Filtre" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
+                <Label Content="Pays" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                <ComboBox Height="30" Width="100" Margin="5,0,0,0"  ItemsSource="{Binding countries}" DisplayMemberPath="Value"  SelectedValuePath="Key" SelectedValue="{Binding filterCountry}" />
+                <Button Content="Appliquer" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdFilter}"></Button>
+            </StackPanel>
+            <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" HorizontalAlignment="Stretch" BorderBrush="#FF30859A" BorderThickness="2" VerticalAlignment="Stretch" ItemsSource="{Binding organisations}" x:Name="list" Grid.Row="2" >
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
-                            <GridViewColumn Header="Nom" DisplayMemberBinding="{Binding name}" />
-                            <GridViewColumn Header="Ville" DisplayMemberBinding="{Binding city}" />
-                            <GridViewColumn Header="Pays" DisplayMemberBinding="{Binding country}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding name}">
+                                <GridViewColumn.Header>
+                                    <GridViewColumnHeader Content="Nom" Command="{Binding cmdSort}" CommandParameter="name" />
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding city}">
+                                <GridViewColumn.Header>
+                                    <GridViewColumnHeader Content="Ville" Command="{Binding cmdSort}" CommandParameter="city" />
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding country}">
+                                <GridViewColumn.Header>
+                                    <GridViewColumnHeader Content="Pays" Command="{Binding cmdSort}" CommandParameter="country" />
+                                </GridViewColumn.Header>
+                            </GridViewColumn>
                             <!-- Bouton accès détail d'une demande -->
                             <GridViewColumn>
                                 <GridViewColumn.CellTemplate>
