--- a/View/Request/ListRequestUCView.xaml
+++ b/View/Request/ListRequestUCView.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300">
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
+            <RowDefinition Height="50" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#FF30859A">
@@ -15,16 +16,48 @@
             <Label Content="{Binding nbrRequest}" VerticalAlignment="Center" Margin="0,0,2,0" Foreground="White" FontWeight="Bold"/>
             <Label Content="Demande(s)" VerticalAlignment="Center" Foreground="White" FontStyle="Italic"/>
         </StackPanel>
-        <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" HorizontalAlignment="Stretch" BorderBrush="#FF30859A" BorderThickness="2" VerticalAlignment="Stretch" ItemsSource="{Binding requests}" x:Name="list" Grid.Row="1" >
+        <Border BorderThickness="2" BorderBrush="#30859a" Grid.Row="1" />
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Background="White" HorizontalAlignment="Stretch" Margin="2,2,2,0">
+            <Label Content="Filtres" Margin="10,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
+            <Label Content="Conseiller" Margin="10,0,0,0" VerticalAlignment="Center"/>
+            <ComboBox Height="30" Width="100" Margin="5,0,0,0" SelectedItem="{Binding filterAdviser}" ItemsSource="{Binding advisers}" />
+            <Label Content="Etat" Margin="10,0,0,0" VerticalAlignment="Center"/>
+            <ComboBox Height="30" Width="100" Margin="5,0,10,0" SelectedItem="{Binding filterState}" ItemsSource="{Binding states}" />
+            <Button Content="Appliquer" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdFilter}"></Button>
+        </StackPanel>
+        <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" HorizontalAlignment="Stretch" BorderBrush="#FF30859A" BorderThickness="2" VerticalAlignment="Stretch" ItemsSource="{Binding requests}" x:Name="list" Grid.Row="2" >
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <GridViewColumn Header="Client" DisplayMemberBinding="{Binding contact.fullName}" />
-                        <GridViewColumn Header="Etudiant" DisplayMemberBinding="{Binding student.fullName}" />
-                        <GridViewColumn Header="Date" DisplayMemberBinding="{Binding creation_date}" />
-                        <GridViewColumn Header="Type de séjour" DisplayMemberBinding="{Binding country}" />
-                        <GridViewColumn Header="Conseiller" DisplayMemberBinding="{Binding user.fullName}" />
-                        <GridViewColumn Header="Etat">
+                        <GridViewColumn DisplayMemberBinding="{Binding contact.fullName}">
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Client" Command="{Binding cmdSort}" CommandParameter="customer" />
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding student.fullName}">
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Etudiant" Command="{Binding cmdSort}" CommandParameter="student" />
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding creation_date}">
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Date" Command="{Binding cmdSort}" CommandParameter="date" />
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding journey_type}">
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Type de séjour" Command="{Binding cmdSort}" CommandParameter="journey" />
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding user.fullName}">
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Conseiller" Command="{Binding cmdSort}" CommandParameter="adviser" />
+                            </GridViewColumn.Header>
+                        </GridViewColumn>
+                        <GridViewColumn>
+                            <GridViewColumn.Header>
+                                <GridViewColumnHeader Content="Etat" Command="{Binding cmdSort}" CommandParameter="state" />
+                            </GridViewColumn.Header>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal" >
