--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -65,7 +65,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="A Propos" VerticalAlignment="Top" TextDecorations="Underline" Grid.Column="0"/>
             <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="Aide" VerticalAlignment="Top" TextDecorations="Underline" Grid.Column="1"/>
-            <Button HorizontalAlignment="Left" Command="{Binding cmdLogout}" Margin="0,10,10,0" Content="Déconnexion" VerticalAlignment="Top" Grid.Column="2"/>
+            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" HorizontalAlignment="Left" Command="{Binding cmdLogout}" Margin="0,10,10,0" Content="Déconnexion" VerticalAlignment="Top" Grid.Column="2"/>
             <Border BorderThickness="1" BorderBrush="#30859a" Grid.ColumnSpan="3" Grid.Row="1" Margin="15" />
 
             <Grid Grid.Row="1" Grid.ColumnSpan="3" Margin="16" Background="#ebebeb">
