--- a/View/Request/ListRequestUCView.xaml
+++ b/View/Request/ListRequestUCView.xaml
@@ -22,7 +22,7 @@
             <Label Content="Conseiller" Margin="10,0,0,0" VerticalAlignment="Center"/>
             <ComboBox Height="30" Width="100" Margin="5,0,0,0" SelectedItem="{Binding filterAdviser}" ItemsSource="{Binding advisers}" />
             <Label Content="Etat" Margin="10,0,0,0" VerticalAlignment="Center"/>
-            <ComboBox Height="30" Width="100" Margin="5,0,10,0" SelectedItem="{Binding filterState}" ItemsSource="{Binding states}" />
+            <ComboBox IsEnabled="false" Height="30" Width="100" Margin="5,0,10,0" SelectedItem="{Binding filterState}" ItemsSource="{Binding states}" />
             <Button Content="Appliquer" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA" Command="{Binding cmdFilter}"></Button>
         </StackPanel>
         <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" HorizontalAlignment="Stretch" BorderBrush="#FF30859A" BorderThickness="2" VerticalAlignment="Stretch" ItemsSource="{Binding requests}" x:Name="list" Grid.Row="2" >
