Mise en place pour le diagramme de classe

--- a/View/Customer/Student/AddStudentView.xaml
+++ b/View/Customer/Student/AddStudentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Customer.AddStudentView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Customer.Student.AddStudentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AddStudentView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
