--- a/View/Customer/Student/DeleteStudentView.xaml
+++ b/View/Customer/Student/DeleteStudentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Customer.DeleteStudentView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Customer.Student.DeleteStudentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DeleteCustomerView" SizeToContent="Height" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"> 
