--- a/View/Customer/Student/EditStudentView.xaml
+++ b/View/Customer/Student/EditStudentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Customer.EditStudentView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Customer.Student.EditStudentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="EditStudentView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
