--- a/View/Organisation/Program/AddProgramView.xaml
+++ b/View/Organisation/Program/AddProgramView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.AddProgramView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.Program.AddProgramView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AddProgramView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
