--- a/View/Organisation/Program/EditProgramView.xaml
+++ b/View/Organisation/Program/EditProgramView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.EditProgramView"
+﻿<Window x:Class="PrototypeEDUCOM.View.Organisation.Program.EditProgramView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="EditProgramView" Width="300" SizeToContent="Height"  ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
