--- a/View/Organisation/Program/ShowProgramUCView.xaml
+++ b/View/Organisation/Program/ShowProgramUCView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PrototypeEDUCOM.View.Organisation.ShowProgramUCView"
+﻿<UserControl x:Class="PrototypeEDUCOM.View.Organisation.Program.ShowProgramUCView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
